<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="coinDetail"
            type="com.example.bitcointicker.data.entities.CoinDetail" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Coin Detail"
                android:textStyle="bold"
                android:text="@{coinDetail.name}"
                android:textSize="27sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="40dp"
                android:layout_marginStart="11dp"
                />

            <TextView
                android:id="@+id/textViewHashingAlgorithmTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/hashing_algorithm"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="31dp"
                android:layout_marginStart="11dp"
                />

            <TextView
                android:id="@+id/textViewHashingAlgorithm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{coinDetail.hashing_algorithm}"
                tools:text="textViewHashingAlgorithm"
                app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
                app:layout_constraintLeft_toRightOf="@+id/textViewHashingAlgorithmTitle"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="31dp"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                />

            <TextView
                android:id="@+id/textViewDescriptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/textViewHashingAlgorithm"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="21dp"
                android:layout_marginStart="11dp"
                />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{coinDetail.description.en}"
                tools:text="textViewDescription"
                app:layout_constraintTop_toBottomOf="@id/textViewHashingAlgorithm"
                app:layout_constraintLeft_toRightOf="@+id/textViewDescriptionTitle"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="21dp"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                />

            <TextView
                android:id="@+id/textViewCurrentPriceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_price"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="21dp"
                android:layout_marginStart="11dp"
                />

            <TextView
                android:id="@+id/textViewCurrentPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{coinDetail.market_data.current_price.usd.toString()}"
                tools:text="textViewCurrentPrice"
                app:layout_constraintTop_toBottomOf="@+id/textViewDescription"
                app:layout_constraintLeft_toRightOf="@+id/textViewCurrentPriceTitle"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="21dp"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="11dp"
                />

            <TextView
                android:id="@+id/textViewPriceChange24HourTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/price_change_percentage_24_hour"
                app:layout_constraintTop_toBottomOf="@+id/textViewCurrentPrice"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="11dp"
                android:layout_marginTop="21dp"
                />

            <TextView
                android:id="@+id/textViewPriceChange24Hour"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{coinDetail.market_data.price_change_percentage_24h.toString()}"
                tools:text="textViewPriceChange24Hour"
                app:layout_constraintTop_toBottomOf="@+id/textViewCurrentPrice"
                app:layout_constraintLeft_toRightOf="@+id/textViewPriceChange24HourTitle"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="11dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="11dp"
                />

            <EditText
                android:id="@+id/editTextRefreshInterval"
                android:layout_width="0dp"
                android:layout_height="37dp"
                android:hint="@string/two_sec"
                android:inputType="numberDecimal"
                android:digits="0123456789"
                android:background="@drawable/radius_21dp"
                app:layout_constraintTop_toBottomOf="@+id/textViewPriceChange24Hour"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/buttonAddFavList"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="11dp"
                android:layout_marginTop="21dp"
                android:paddingStart="11dp"
                />

            <Button
                android:id="@+id/buttonAddFavList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_fav"
                app:layout_constraintTop_toTopOf="@+id/editTextRefreshInterval"
                app:layout_constraintBottom_toBottomOf="@+id/editTextRefreshInterval"
                app:layout_constraintLeft_toRightOf="@+id/editTextRefreshInterval"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_margin="11dp"
                />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>